<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">多肉Garden</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">欢迎进入多肉花园!</string>

    <string name="welcom">欢迎进入多肉花园</string>
    <string name="login">登陆肉肉</string>
    <string name="username">用户名:</string>
    <string name="password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="loginin">登陆</string>
    <string name="signin">注册</string>
    <string name="cancle">取消</string>
    <string name="thethird">第三方登陆</string>
    <string name="qq">QQ</string>
    <string name="sina">Sina</string>
    <string name="login_in">登陆</string>
    <string name="tabhost">花园主页</string>
    <string name="returnback">返回</string>
    
    <string name="send">发布</string>
    <string name="daohang">我的多肉花园</string>
    <string name="tvToday">今日</string>
    <string name="tvNumber">xxx</string>
    <string name="tvTieName">tvTieName</string>
    <string name="tag1">tag</string>

        <string name="user_Name">用户名：</string>
    <string name="input_user_Name">请输入用户名</string>
    <string name="pass_Word">密码：</string>
    <string name="input_pass_Word">请输入用户密码</string>
    <string name="input_button">登录</string>
    <string name="regist">注册</string>
    <string name="regist_name">请输入注册用户名</string>
    <string name="regist_password">请输入密码</string>
    <string name="regist_password_repeat">请再次输入密码</string>
    <string name="mail_box">请输入您的邮箱</string>
    <string name="phone">请输入您的手机号</string>
    
</resources>
