<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registbackground"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/registName"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:hint="@string/regist_name"/>
    <EditText
        android:id="@+id/registPassWord"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:inputType="textPassword"
   		android:hint="@string/regist_password"/>
    <EditText
        android:id="@+id/registPassrdWoRepeat"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:inputType="textPassword"
   		android:hint="@string/regist_password_repeat"/>
    <EditText
        android:id="@+id/mailBox"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:inputType="textEmailAddress"
   		android:hint="@string/mail_box"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:inputType="phone"		
   		android:hint="@string/phone"/>

    <Button
        android:id="@+id/regist2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist" />

</LinearLayout>
